# libphonecode

./: .gitignore  CMakeLists.txt  README.md  main.c  phone_encodings.c  phone_encodings.h  phonecode.c  phonecode.h  string_coll.c  string_coll.h  util.c  util.h
tests/: CMakeLists.txt  phonecode_test.cpp  testutils.cpp  testutils.h  utils.cpp  utils.h
